--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 em { color: green; }
 
 th {
-  color:white;
-  background:orenge;
+  color: white;
+  background: orenge;
 }
-th,tb {
+tb {
   border: 1px sorid black;
 }
-table{border-collapse: collapse;}
+le{border-collapse: collapse;}
