--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 em { color: green; }
 
-th {
-  color: white;
-  background: orange;
-}
-th,td {
-  border: 1px solid black;
-}
+th {color: white;background: orange;}
+th,td {border: 1px solid black;}
 table{border-collapse: collapse;}
